# magdalena

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  compose.yaml  environment.dev.yml  environment.yml  methodshub.py  pyproject.toml  requirements.dev.txt  requirements.txt  wsgi.py
.gitlab/issue_templates/: default.md  production.md  stage.md
.gitlab/merge_request_templates/: default.md
docker-scripts/: Rmd2ipynb.sh  Rmd2md.sh  docx2md.sh  ipynb2ipynb.sh  ipynb2md.sh  md2md.sh  md2qmd.sh  qmd2qmd.sh
docs/: Makefile  make.bat
docs/source/: api.rst  architecture.rst  conf.py  contributing.rst  faq.rst  index.rst
docs/source/_static/: rapidoc.html  swagger.html
docs/source/_static/openapi/: magdalena.yaml
docs/source/dev/: architecture.rst  contributing.rst  faq.rst  integration-tests.rst  unit-tests.rst
docs/source/docker/: env.rst
docs/source/img/: magdalena-logo.png.license
docs/source/user/: api.rst  faq.rst
magdalena/: app.py  blueprint.py  methodshub.py  mybinder.py  pem.py  tasks.py  views.py  worker.py
magdalena/docker-scripts/: Rmd2ipynb.sh  Rmd2md.sh  Rmd2qmd.sh  copy-assets.sh  docx2html.sh  docx2md.sh  ipynb2html.sh  ipynb2ipynb.sh  ipynb2md.sh  ipynb2qmd.sh  md2html.sh  md2ipynb.sh  md2md.sh  md2pdf.sh  md2qmd.sh  qmd2html.sh  qmd2ipynb.sh  qmd2md.sh  qmd2qmd.sh
magdalena/pandoc-filters/: class-to-blockquote.lua  class-to-heading.lua  class-to-keywords.lua  custom-style-to-class.lua  merge-div.lua  populate-yaml-header.lua  remove-extras.lua  remove-hyperlink-custom-style.lua  remove-toc.lua
magdalena/templates/: index-authorization-required.html  index.html
magdalena/tests/: conftest.py
magdalena/tests/assets/: minimal.docx
magdalena/tests/expected_files/: minimal-example-qmd-rstats-units.html
magdalena/tests/functional/: test_api.py  test_index.py
magdalena/tests/integration/: test_api.py  test_index.py
magdalena/tests/unit/: test_lxml.py  test_methodshub.py  test_minimal_examples.py
magdalena/tests/util/: methodshub.py
nginx/sites-enabled/: keycloak.gesis.conf  keycloak.gesis.dev.conf  methodshub.gesis.conf  methodshub.gesis.dev.conf
pandoc-filters/: class-to-heading.lua  custom-style-to-class.lua  merge-div.lua  remove-extras.lua  remove-toc.lua
templates/: index.html
tests/: conftest.py
tests/functional/: test_api.py  test_index.py
tests/unit/: test_methodshub.py
