[tool.poetry]
package-mode = false
name = "magdalena"
version = "0.2.3"
description = "Microservice to convert Quarto documents into output formats such as HTML and PDF."
authors = ["Raniere Silva <Raniere.CostadaSilva@gesis.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
docker = "^7.0.0"
jupyter-repo2docker = "^2023.6.0"
gql = {extras = ["requests"], version = "^3.5.0"}
lxml = "^5.1.0"
cssselect = "^1.2.0"
pyjwt = "^2.8.0"
flask-jwt-extended = "^4.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.2.4"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-openapi = "^0.8.4"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
